kubernetes/mediasrv/apps/flux-system/add-ons/app/notifications/webhooks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    external-dns.alpha.kubernetes.io/target: kreigan.com
spec:
  ingressClassName: external-nginx
  rules:
    - host: flux-webhook.kreigan.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
